Fixed z-index
Changed z-index value to work on the updated reddit stylesheet.

--- a/inject.css
+++ b/inject.css
@@ -5,7 +5,7 @@
   padding: 0;
   background: #999;
   transform-origin: 0% 50%;
-  z-index: -1;
+  z-index: 900;
 }
 
 .comment .child, .comment .showreplies {
